Add product logos and production logos

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ highlighter: rouge
 github: [Repository metadata]
 
 baseurl: "https://kristenzirkler.github.io/cm-styleguide"
+livereload: true
 
 # Sass
 sass:
