--- a/_data/colors.yml
+++ b/_data/colors.yml
@@ -1,8 +1,8 @@
 - name: Brand Orange
   hex: '#e98300'
   variable-name: '$main-color'
-  pantone: 'PMS 144'
-  cmyk: '0C 52M 100Y 0K'
+  #pantone: 'PMS 144'
+  cmyk: '6C 57M 100Y 0K'
   main: true
 
 - name: Black
